# util

./: CMakeLists.txt
.github/workflows/: test.yml
include/: util.h
include/util/: string.h
test/: string.c
